--- a/Manage/appsettings.json
+++ b/Manage/appsettings.json
@@ -10,5 +10,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "database": "Data Source=DESKTOP-HJ37BIM;Initial Catalog=Employee_manager_VMO;User ID=sa;Password=123456"
+  },
+  "Jwt": {
+    "Key": "namso1"
   }
 }
