--- a/Manage/appsettings.json
+++ b/Manage/appsettings.json
@@ -9,9 +9,9 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "database": "Data Source=DESKTOP-NMAHJOG\\SQLEXPRESS01;Initial Catalog=Employee_manager_VMO_lan2;Persist Security Info=True;User ID=sa;Password=123456"
+    "database": "Data Source=DESKTOP-HJ37BIM;Initial Catalog=Employee_manager_VMO;User ID=sa;Password=123456"
   },
   "Jwt": {
-    "Key": "namso1"
+    "Key": "AAAAbgAAAGEAAABtAAAAcwAAAG8AAAAx"
   }
 }
