--- a/Manage/appsettings.json
+++ b/Manage/appsettings.json
@@ -9,7 +9,7 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "database": "Data Source=DESKTOP-NMAHJOG\\SQLEXPRESS01;Initial Catalog=Done;Persist Security Info=True;User ID=sa;Password=123456"
+    "database": "Data Source=DESKTOP-NMAHJOG\\SQLEXPRESS01;Initial Catalog=employeeManager;Persist Security Info=True;User ID=sa;Password=123456"
   },
   "Jwt": {
     "Key": "AAAAbgAAAGEAAABtAAAAcwAAAG8AAAAx"
